chore: upgrade toolchain to latest stable/LTS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,18 @@ jobs:
     runs-on: windows-latest
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+
+    - name: Verify global.json existence
+      run: |
+        if (!(Test-Path "global.json")) {
+          Write-Error "global.json is missing. Please ensure the .NET SDK is pinned."
+          exit 1
+        }
+      shell: powershell
     
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
 
