--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,26 @@
-# Unity generated
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
 
-# Visual Studio / JetBrains
-.vs/
-.idea/
-*.csproj
-*.sln
+# .NET
+bin/
+obj/
 *.user
 *.suo
-*.userprefs
-*.pidb
-*.booproj
-*.svd
-*.pdb
-*.opdb
+.vs/
+*.lock.json
+*.cache
 
-# OS
-.DS_Store
-Thumbs.db
+# Unity
+[Ll]ibrary/
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
+[Bb]uilds/
+[Ll]ogs/
+[Mm]emoryCaptures/
+/[Aa]ssets/AssetStoreTools*
+/[Aa]ssets/Plugins/Editor/JetBrains*
+.gradle/
+
+# IDEs
+.idea/
+*.vscode/
+*.sln.DotSettings.user
