--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
     - uses: actions/checkout@v6
 
+    - name: Verify repo_files.txt freshness
+      run: |
+        powershell -ExecutionPolicy Bypass -File ./tools/update_repo_files.ps1
+        git diff --exit-code repo_files.txt
+      shell: bash
+
     - name: Verify global.json existence
       run: |
         if (!(Test-Path "global.json")) {
