--- a/UnityApp/Packages/manifest.json
+++ b/UnityApp/Packages/manifest.json
@@ -18,6 +18,7 @@
     "com.unity.modules.terrain": "1.0.0",
     "com.unity.modules.terrainphysics": "1.0.0",
     "com.unity.modules.tilemap": "1.0.0",
+    "com.unity.test-framework": "1.3.9",
     "com.unity.modules.ui": "1.0.0",
     "com.unity.modules.uielements": "1.0.0",
     "com.unity.modules.umbra": "1.0.0",
