feat: automated shared info pipeline (Drive upload)

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,6 @@ crashlytics-build.properties
 # RoboTwin Specific
 workspace_snapshot.txt
 docs/antigravity/context_exports/
+
+# Shared Info & Temp
+.gpt/
