--- a/CoreSim/src/RobotTwin.CoreSim/RobotTwin.CoreSim.csproj
+++ b/CoreSim/src/RobotTwin.CoreSim/RobotTwin.CoreSim.csproj
@@ -9,7 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
-    <PackageReference Include="System.Text.Json" Version="9.0.0" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+  </PropertyGroup>
 
 </Project>
