fix(ci): reliability m0 & cs8618 hygiene

--- a/CoreSim/src/RobotTwin.CoreSim/RobotTwin.CoreSim.csproj
+++ b/CoreSim/src/RobotTwin.CoreSim/RobotTwin.CoreSim.csproj
@@ -8,7 +8,7 @@
     <LangVersion>latest</LangVersion>
     <Deterministic>true</Deterministic>
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-    <PathMap>$(MSBuildProjectDirectory)=/repo/CoreSim/src/RobotTwin.CoreSim</PathMap>
+    <PathMap>$(MSBuildProjectDirectory)=/CoreSim</PathMap>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
