--- a/.github/workflows/unity_ci.yml
+++ b/.github/workflows/unity_ci.yml
@@ -77,6 +77,8 @@ jobs:
         uses: game-ci/unity-test-runner@v4
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           projectPath: UnityApp
           unityVersion: ${{ needs.probe.outputs.unity_version }}
