feat(tests): add PlayMode smoke tests and enable in CI (Issue #32)

--- a/.github/workflows/unity_ci.yml
+++ b/.github/workflows/unity_ci.yml
@@ -82,7 +82,7 @@ jobs:
         with:
           projectPath: UnityApp
           unityVersion: ${{ needs.probe.outputs.unity_version }}
-          testMode: editmode
+          testMode: all
           artifactsPath: artifacts
           
       - name: Upload Test Results
