fix(ci): asmdef reference and runmode polish

--- a/UnityApp/Assets/Tests/PlayMode/RobotTwin.Tests.PlayMode.asmdef
+++ b/UnityApp/Assets/Tests/PlayMode/RobotTwin.Tests.PlayMode.asmdef
@@ -1,8 +1,8 @@
 {
     "name": "RobotTwin.Tests.PlayMode",
-    "references": [
         "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner"
+        "UnityEditor.TestRunner",
+        "Assembly-CSharp"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
