--- a/UnityApp/Assets/Tests/PlayMode/RobotTwin.Tests.PlayMode.asmdef
+++ b/UnityApp/Assets/Tests/PlayMode/RobotTwin.Tests.PlayMode.asmdef
@@ -1,5 +1,6 @@
 {
     "name": "RobotTwin.Tests.PlayMode",
+    "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "Assembly-CSharp"
