refactor(unity): create RobotTwin.Runtime assembly and update test references

--- a/UnityApp/Assets/Scripts/RobotTwin.Runtime.asmdef
+++ b/UnityApp/Assets/Scripts/RobotTwin.Runtime.asmdef
@@ -1,12 +1,9 @@
 {
-    "name": "RobotTwin.Tests.EditMode",
-        "UnityEngine.UIElementsModule",
-        "Unity.UIElements",
-        "RobotTwin.Runtime"
+    "name": "RobotTwin.Runtime",
+    "references": [
+        "Unity.TextMeshPro"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
