--- a/UnityApp/Assets/Tests/PlayMode/RobotTwin.Tests.PlayMode.asmdef
+++ b/UnityApp/Assets/Tests/PlayMode/RobotTwin.Tests.PlayMode.asmdef
@@ -1,9 +1,8 @@
 {
     "name": "RobotTwin.Tests.PlayMode",
-    "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "Assembly-CSharp"
+        "RobotTwin.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
