fix(build): repair corrupted JSON in asmdefs

--- a/UnityApp/Assets/Tests/EditMode/RobotTwin.Tests.EditMode.asmdef
+++ b/UnityApp/Assets/Tests/EditMode/RobotTwin.Tests.EditMode.asmdef
@@ -1,5 +1,6 @@
 {
     "name": "RobotTwin.Tests.EditMode",
+    "references": [
         "UnityEngine.UIElementsModule",
         "Unity.UIElements",
         "RobotTwin.Runtime"
