fix(core): correct Validator props and add Playground docs

--- a/UnityApp/Assets/Tests/PlayMode/RobotTwin.Tests.PlayMode.asmdef
+++ b/UnityApp/Assets/Tests/PlayMode/RobotTwin.Tests.PlayMode.asmdef
@@ -1,9 +1,9 @@
-{
     "name": "RobotTwin.Tests.PlayMode",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "RobotTwin.Runtime"
+        "RobotTwin.Runtime",
+        "Assembly-CSharp"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
