--- a/UnityApp/Packages/manifest.json
+++ b/UnityApp/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.inputsystem": "1.11.2",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.test-framework": "1.3.9",
+    "com.unity.modules.audio": "1.0.0",
     "com.unity.modules.imgui": "1.0.0",
     "com.unity.modules.jsonserialize": "1.0.0",
     "com.unity.modules.physics": "1.0.0",
