Refactor and streamline automation scripts
- Removed obsolete scripts: run_full_cycle.py, run_qa.ps1, run_self_test.py, and verify_runtime.py.
- Introduced new scripts for building and managing Unity projects, including build_bvm.py, build_native.ps1, build_windows_standalone.ps1, and update_unity_plugins.ps1.
- Added scripts for validating UXML files, verifying assets, and updating workspace snapshots.
- Enhanced error handling and logging across scripts to improve maintainability and debugging.
- Updated asset verification logic to ensure icons are present and correctly referenced.

--- a/.gitignore
+++ b/.gitignore
@@ -91,7 +91,9 @@ docs/antigravity/context_exports/
 .gpt/
 templates/
 /tests/integration/node_modules/
+/tests/integration/test-report.html
 /tools/dashboard/node_modules/
 /Screenshots/
 /logs/
 /Reference_Design/
+/tools/arduino-cli/
