Add Arduino starter templates and components
- Introduced a momentary button component with specifications and default values.
- Created Arduino Button Starter template with a complete circuit setup including Arduino Uno, LED, Resistor, Button, and Battery.
- Added Arduino LED Starter template featuring a similar setup without the button.
- Included necessary metadata and asset files for both templates to ensure proper integration within the Unity project.

--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,8 @@ docs/antigravity/context_exports/
 # Shared Info & Temp
 .gpt/
 templates/
+!UnityApp/Assets/Templates/
+!UnityApp/Assets/Templates/**
 /tests/integration/node_modules/
 /tests/integration/test-report.html
 /tools/**/node_modules/
