Add Debug Console for running tests and viewing logs
- Introduced a new Debug Console as a local web dashboard for executing tests and displaying logs.
- Implemented server functionality in `server.py` to handle test execution and log retrieval.
- Created a PowerShell script `launch_debug_console.ps1` for easy server launch.
- Developed frontend components in `index.html`, `app.js`, and `styles.css` for user interaction.
- Added SVG favicon for the Debug Console.
- Included detailed documentation in `DEBUG_CONSOLE.md` outlining features and usage.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,10 +59,11 @@ jobs:
       run: |
         pwsh -NoProfile -ExecutionPolicy Bypass -File ./tools/update_unity_plugins.ps1 -Check
 
-    - name: Verify docs/repo_files.txt freshness
-      run: |
-        ./tools/update_repo_files.ps1 -Check
+    - name: Verify repo snapshot (README tree + repo_files)
       shell: pwsh
+      run: |
+        pwsh -NoProfile -ExecutionPolicy Bypass -File ./tools/scripts/update_repo_snapshot.ps1
+        git diff --exit-code
 
     - name: Verify no tracked build artifacts
       run: |
